--- a/my-app/src/Companents/AboutSalon/AboutSalon.css
+++ b/my-app/src/Companents/AboutSalon/AboutSalon.css
@@ -1,6 +1,6 @@
 .as-box{
     width: 100%;
-    height: 1200px;
+    height: 900px;
     text-align: center;
     padding-top: 60px;
 
@@ -15,7 +15,8 @@
 
 .as-content{
     padding: 50px;
-    width: 70%;
+    padding-top: 50px;
+    width: 1300px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -36,4 +37,69 @@
     line-height: 37px;
     margin: 0;
     padding: 0;
+}
+@media (max-width:1500px) {
+    .as-box{
+        height: 770px;
+        padding-top: 60px;
+    
+    }
+    
+    .as-box h1{
+        font-size: 35px;
+        margin: 0;
+    }
+    
+    .as-content{
+        padding: 25px;
+        padding-top: 40px;
+
+        width: 924px;
+        gap: 30px;
+    }
+    
+    .as-content img{
+        max-width: 390px;
+        min-width: 390px;
+        border-radius: 25px;
+    }
+    .as-text p{
+
+        font-size: 21px;
+        line-height: 29px;
+        margin: 0;
+        padding: 0;
+    }
+}
+@media (max-width:1024px) {
+    .as-box{
+        height: 640px;
+        padding-top: 30px;
+    
+    }
+    
+    .as-box h1{
+        font-size: 30px;
+        margin: 0;
+    }
+    
+    .as-content{
+        padding: 5px;
+        padding-top: 25px;
+        width: 718px;
+        gap: 20px;
+    }
+    
+    .as-content img{
+        max-width: 300px;
+        min-width: 300px;
+        border-radius: 30px;
+    }
+    .as-text p{
+
+        font-size: 18px;
+        line-height: 22px;
+        margin: 0;
+        padding: 0;
+    }
 }
