--- a/my-app/src/Companents/AboutUs/AboutUs.css
+++ b/my-app/src/Companents/AboutUs/AboutUs.css
@@ -92,6 +92,11 @@
     }
 }
 @media (max-width:1024px) {
+    .ab-body{
+        width: 100%;
+        height: 850px;
+
+    }
     
     .ab-text{
         margin-top: 70px;
