--- a/my-app/src/Companents/Advantages/Advantages.css
+++ b/my-app/src/Companents/Advantages/Advantages.css
@@ -12,10 +12,10 @@
     display: flex;
     color: white;
     justify-content: space-between;
-    align-items: center;
 }
 
 .adv-item{
+    margin-top: 50px;
     width: 33%;
     display: flex;
     flex-direction: column;
@@ -40,4 +40,97 @@
     font-size: 24px;
     font-family: 'Montserrat-Light';
 
+}
+@media (max-width:1572px) {
+    .adv-body{
+        height: 375px;
+    }
+    
+    .adv-item img{
+        padding: 19px 20px 22px 20px;
+        width: 90px;
+        border: 15px solid white;
+        border-radius: 100px;
+    }
+    
+    .adv-item h2{
+        font-family: 'Montserrat-Medium';
+        color: white;
+        font-size: 24px;
+    }
+    
+    .adv-item a{
+        font-size: 20px;
+        font-family: 'Montserrat-Light';
+    }
+}
+@media (max-width:1260px) {
+    .adv-body{
+        height: 325px;
+    }
+    .adv-item img{
+        padding: 19px 20px 22px 20px;
+        width: 70px;
+        border: 10px solid white;
+        border-radius: 100px;
+    }
+    
+    .adv-item h2{
+        font-family: 'Montserrat-Medium';
+        color: white;
+        font-size: 20px;
+    }
+    
+    .adv-item a{
+        font-size: 18px;
+        font-family: 'Montserrat-Light';
+    }
+}
+@media (max-width:1050px) {
+    .adv-body{
+        height: 285px;
+    }
+    .adv-item{
+        margin-top: 30px;
+    }
+    
+    .adv-item img{
+        padding: 19px 20px 22px 20px;
+        width: 55px;
+        border: 9px solid white;
+        border-radius: 100px;
+    }
+    
+    .adv-item h2{
+        font-family: 'Montserrat-Medium';
+        color: white;
+        font-size: 18px;
+    }
+    
+    .adv-item a{
+        font-size: 18px;
+        font-family: 'Montserrat-Light';
+    }
+}
+@media (max-width:946px) {
+    .adv-body{
+        height: 270px;
+    }
+    .adv-item img{
+        padding: 19px 20px 22px 20px;
+        width: 50px;
+        border: 8.5px solid white;
+        border-radius: 100px;
+    }
+    
+    .adv-item h2{
+        font-family: 'Montserrat-Medium';
+        color: white;
+        font-size: 16px;
+    }
+    
+    .adv-item a{
+        font-size: 16px;
+        font-family: 'Montserrat-Light';
+    }
 }
