--- a/my-app/src/Companents/Appointment/Appointment.css
+++ b/my-app/src/Companents/Appointment/Appointment.css
@@ -1,6 +1,6 @@
 .apm-body{
     width: 100%;
-    height: 900px;
+    height: 100svh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,4 +19,20 @@
     margin-bottom: 90px;
     padding: 0;
 
+}
+@media (max-width:1500px) {
+    .apm-body h1{
+        color: black;
+        font-family: 'Montserrat';
+        padding: 50px;
+        font-size: 35px;
+    }
+}
+@media (max-width:1024px) {
+    .apm-body h1{
+        color: black;
+        font-family: 'Montserrat';
+        padding: 30px;
+        font-size: 30px;
+    }
 }
