--- a/my-app/src/Companents/Info/Info.css
+++ b/my-app/src/Companents/Info/Info.css
@@ -10,7 +10,7 @@
     border: 1px solid #47474700;
 }
 .info-about{
-    margin-top: 0%;
+    margin-top: 50px;
     display: flexbox;
     flex-direction: column;
     align-items: center;
