--- a/my-app/src/Companents/PartnerBrands/PartnerBrands.css
+++ b/my-app/src/Companents/PartnerBrands/PartnerBrands.css
@@ -3,12 +3,16 @@
     width: 100%;
     height: 550px;
     background-color:#474747;
+}
+.pb-content{
+    width: 1300px;
     display: flex;
     flex-direction: column;
+    margin-left: auto;
+    margin-right:auto;
 }
-
 .first-line{
-    width: 70%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     height: 200px;
@@ -20,7 +24,8 @@
 
 
 .second-line{
-    width: 70%;
+    width: 100%;
+
     margin-left: auto;
     margin-right: auto;
     height: 200px;
@@ -61,7 +66,11 @@
     font-size: 30px;
     line-height: 25px;
 }
-.terra h1{
+.terra-kostil{
+    margin-bottom: 5px;
+    margin-left: 5px;
+}
+.terra-kostil h1{
     font-size: 72px;
 }
 
@@ -75,4 +84,86 @@
 }
 .pb-hr hr{
     width: 800px;
+}
+@media (max-width:1400px) {
+    .lux a{
+        font-size: 35px;
+        line-height: 35px;
+    }
+    .lux b{
+        font-size: 60px;
+    }
+    .pure a{
+        font-size: 50px;
+    }
+    .keune a{
+        line-height: 24px;
+        font-size: 20px;
+    }
+    .keune b{
+        font-size: 50px;
+    }
+    .terra{
+        display: flex;
+        align-items: center;
+    }
+    .terra a{
+        font-size: 23px;
+        line-height: 16px;
+    }
+    .terra-kostil{
+        margin-bottom: 5px;
+        margin-left: 5px;
+    }
+    .terra-kostil h1{
+        font-size: 50px;
+    }
+    .pb-content{
+        width: 900px;
+    }
+    .pb-hr hr{
+        width: 600px;
+    }
+
+}
+@media (max-width:1024px) {
+    .lux a{
+        font-size: 29px;
+        line-height: 29px;
+    }
+    .lux b{
+        font-size: 50px;
+    }
+    .pure a{
+        font-size: 42px;
+    }
+    .keune a{
+        line-height: 20px;
+        font-size: 17px;
+    }
+    .keune b{
+        font-size: 42px;
+    }
+    .terra{
+        display: flex;
+        align-items: center;
+    }
+    .terra a{
+        font-size: 20px;
+        line-height: 5px;
+    }
+    .terra-kostil{
+        margin-bottom: 5px;
+        margin-left: 5px;
+    }
+    .terra-kostil h1{
+        font-size: 42px;
+    }
+    .pb-content{
+        width: 700px;
+    }
+    .pb-hr hr{
+        width: 500px;
+    }
+
 }
