--- a/my-app/src/Companents/Sale/Sale.css
+++ b/my-app/src/Companents/Sale/Sale.css
@@ -63,8 +63,12 @@
     border-radius: 32px;
     font-size: 22px;
     transition: all 0.5s ease;
-}
+    text-decoration: none;
 
+}
+.pole button a {
+    text-decoration: none;
+}
 .pole button:hover{
     background-color: white;
     color: black;
@@ -72,7 +76,7 @@
 @media (max-width:1500px) {
     .bg-light{
         width: 100%;
-        height: 100svh;
+        height: 800px;
 
     }
     .pole{
@@ -100,12 +104,11 @@
 @media (max-width:1024px) {
     .bg-light{
         width: 100%;
-        height: 100svh;
+        height: 700px;
 
     }
     .pole{
-        min-width: 370px;    
-
+        min-width: 370px;   
         width: 80%;    
     }
     .pole h1{
@@ -121,7 +124,7 @@
     .pole button{
         width: 70%;
         height: 60px;
-        margin-top: 40%;
+        margin-top: 130px;
         margin-bottom: auto;
         font-size: 20px;
     }
