--- a/my-app/src/Companents/Salon/Salon.css
+++ b/my-app/src/Companents/Salon/Salon.css
@@ -21,11 +21,11 @@
     font-family: 'Montserrat';
     margin: 0;
     padding: 70px;
-    font-size: 45px;
+    font-size: 40px;
 }
 .sl-content{
-    width: 80%;
-    height: 100%;
+    width: 1350px;
+    height: auto;
     /* background-color: #3cff00; */
     display: flex;
     margin-left: auto;
@@ -33,8 +33,10 @@
 }
 
 .sl-content img{
-    border-radius: 1.65svw;
+    border-radius: 20px;
     min-width: 680px;
+    max-width: 680px;
+    min-height: 740px;
     max-height: 740px;
 }
 .sl-text{
@@ -46,10 +48,11 @@
     flex-direction: column;
     gap: 0px;
     align-items: flex-start;
+    height: 740px;
 }
 
 .sl-atext{
-    height: 527px;
+    height: 590px;
     text-align: justify;
 }
 .sl-text a{
@@ -60,7 +63,7 @@
 
 .sl-text h2{
     margin-top: 0px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-size: 35px;
     color:#474747;
 
@@ -80,4 +83,132 @@
 .sl-text button:hover{
     background-color: #474747;
     color:white;
+}
+@media (max-width:1500px) {
+    .sl-box h1{
+        color: black;
+        font-family: 'Montserrat';
+        margin: 0;
+        padding: 70px;
+        font-size: 35px;
+    }
+    .sl-content{
+        width: 950px;
+        height: 100%;
+        /* background-color: #3cff00; */
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .sl-content img{
+        border-radius: 20px;
+        min-width: 450px;
+        max-width: 450px;
+        min-height: 490px;
+        max-height: 490px;
+    }
+    .sl-text{
+        margin-left: 30px;
+        height: 490px;
+    }
+
+    .sl-atext{
+        height: 380px;
+    }
+    .sl-text a{
+        font-size: 20px;
+        line-height: 25px;
+        text-align: justify;
+    }
+
+    .sl-text h2{
+        margin-top: 0px;
+        margin-bottom: 15px;
+        font-size: 28px;
+        color:#474747;
+
+    }
+    .sl-text button{
+        width: 250px;
+        height: 50px;
+        border-radius: 39px;
+        border: 1px solid black;
+        background-color: #47474700;
+        justify-self: flex-end;
+        font-family: 'Montserrat';
+        font-size: 22px;
+        transition: all 1s ease;
+        color:#474747
+    }
+}
+@media (max-width:1024px) {
+    .sl-box h1{
+        color: black;
+        font-family: 'Montserrat';
+        margin: 0;
+        padding: 70px;
+        font-size: 35px;
+    }
+    .sl-content{
+        width: 718px;
+        height: 100%;
+        /* background-color: #3cff00; */
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .sl-content img{
+        border-radius: 20px;
+        min-width: 350px;
+        max-width: 350px;
+        min-height: 381px;
+        max-height: 381px;
+    }
+    .sl-text{
+        margin-left: 25px;
+        height: 490px;
+    }
+
+    .sl-atext{
+        width: 388px;
+        height: 380px;
+    }
+    .sl-text a{
+        font-size: 20px;
+        line-height: 28px;
+        text-align: justify;
+    }
+    .pzdc{
+        min-width: 718px;
+        position: relative;
+        left: -380px;
+        top: -10px
+    }
+    .pzdc1{
+        max-width: 340px;
+        position: relative;
+        left: 0px;
+    }
+    .sl-text h2{
+        margin-top: 0px;
+        margin-bottom: 10px;
+        font-size: 28px;
+        color:#474747;
+
+    }
+    .sl-text button{
+        position: relative;
+        left:100px;
+        top:30px;
+        width: 250px;
+        height: 50px;
+        border-radius: 39px;
+        border: 1px solid black;
+        background-color: #47474700;
+        justify-self: flex-end;
+        font-family: 'Montserrat';
+        font-size: 22px;
+        transition: all 1s ease;
+        color:#474747
+    }
 }
