--- a/my-app/src/Companents/ServicesComp/ServicesComp.css
+++ b/my-app/src/Companents/ServicesComp/ServicesComp.css
@@ -36,7 +36,12 @@
     border: 1px solid black;
     width: 20svw;
 }
+
 @media (max-width:1350px) {
+    .sc-box{
+        width: 100%;
+        height: 1200px;
+    }
     .sc-serv{
         width: 924px;/* 1024-100 */
     }
@@ -52,6 +57,10 @@
 
 }
 @media (max-width:1024px) {
+    .sc-box{
+        height: 1130px;
+
+    }
     .sc-serv{
         width: 748px;/* 768-20 */
     }
