--- a/my-app/src/Companents/Team/Carousel.css
+++ b/my-app/src/Companents/Team/Carousel.css
@@ -183,8 +183,8 @@
   
   .dot {
     border: 4px solid #474747;
-    width: 7px;
-    height: 7px;
+    width: 8px;
+    height: 8px;
     background-color: white;
     border-radius: 50%;
     cursor: pointer;
@@ -234,4 +234,57 @@
   .slides-container {
     height: 340px;
   }
+}
+  @media (max-width:1024px) {
+    .image {
+      border-top-left-radius: 30px;
+      border-bottom-left-radius: 30px;
+      min-width: 160px;
+      max-width: 160px;
+    }
+    .content {
+      border-radius: 30px;
+      height: 240px;
+      min-width: 700px;
+    }
+    .text {
+      font-size: 16px;
+    }
+    .obrezka1{
+      margin-left: 25px;
+      max-width: auto;
+      min-width: auto;
+      margin-bottom: 20px;
+    }
+    .obrezka2{
+      margin-right: 35px;
+      margin-left: 35px;
+      max-width: auto;
+      min-width: auto;
+      margin-bottom: 30px;
+    }
+    .order-button{
+      height: 45px;
+      width: 160px;
+      margin-right: 0;
+      margin-top: 150px;
+      border-radius: 31px;
+      font-size: 17px;
+    }
+    .obrez-but{
+      margin-top: 20px;
+      margin-right: 1svw;
+      margin-left: 1svw;
+    }
+    .slides-container {
+      height: 340px;
+    }
+    .dot {
+      border: 4px solid #474747;
+      width: 7px;
+      height: 7px;
+      background-color: white;
+      border-radius: 50%;
+      cursor: pointer;
+    }
 } 
