--- a/my-app/src/Companents/test/test.css
+++ b/my-app/src/Companents/test/test.css
@@ -1,100 +1,130 @@
-.test{
-    min-width: 100%;
-    height: 400px;
-    background-color: #ff0000;
-}
-@media (min-width:100px) {
-    .test{
-        background-color: #5e5e5e;
-    }
-}
-@media (min-width:200px) {
-    .test{
-        background-color: #361010;
-    }
-}
-@media (min-width:300px) {
-    .test{
-        background-color: #4e3838;
-    }
-}
-@media (min-width:400px) {
-    .test{
-        background-color: #c5ff8e;
-    }
-}
-@media (min-width:500px) {
-    .test{
-        background-color: #005326;
-    }
-}
-@media (min-width:600px) {
-    .test{
-        background-color: #a5789a;
-    }
-}
-@media (min-width:700px) {
-    .test{
-        background-color: #2f574d;
-    }
-}
-@media (min-width:800px) {
-    .test{
-        background-color: #427413;
-    }
+.ow-box {
+    width: 100%;
+    height: auto;
+    font-family: 'Montserrat';
+    padding-bottom: 50px;
 }
 
-@media (min-width:900px) {
-    .test{
-        background-color: #814646;
-    }
+.ow-box h1 {
+    font-size: 40px;
+    margin: 0;
+    padding-top: 90px;
+    text-align: center;
+    padding-bottom: 70px;
+
 }
 
-@media (min-width:1000px) {
-    .test{
-        background-color: #ffffff;
-    }
+.ow-content {
+    width: min-content;
+    max-height: 1150px; /* Установите начальную максимальную высоту */
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    transition: max-height 1s ease; /* Анимация изменения высоты */
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
 }
 
-@media (min-width:1100px) {
-    .test{
-        background-color: #000000;
+.ow-row{
+    display: flex;
+    justify-content: space-between;
+    gap:80px
+}
+.ow-row img{
+    width: 400px;
+    height: auto;
+}
+.ow-content.show-all-rows {
+    max-height: 2500px; /* Установите достаточно большую максимальную высоту для показа всех строк */
+    transition: max-height 1s ease; /* Анимация изменения высоты */
+}
+.toggle-button {
+    width: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 40px;
+    color: #000000;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+@media (max-width:1500px) {
+    .ow-box h1 {
+        font-size: 35px;
+        padding-top: 70px;
+        padding-bottom: 55px;
+    }
+    .ow-row img{
+        width: 350px;
+    }
+    .ow-row{
+        gap:45px
+    }
+    .ow-content {
+        max-height: 980px; /* Установите начальную максимальную высоту */
+        gap: 45px;
+    }
+    .ow-content.show-all-rows {
+        max-height: 2010px; /* Установите достаточно большую максимальную высоту для показа всех строк */
+    }
+    .toggle-button {
+        width: 200px;
+        margin-top: 40px;
+        font-size: 20px;
     }
 }
-
-@media (min-width:1200px) {
-    .test{
-        background-color: #9ca77d;
+@media (max-width:1240px) {
+    .ow-box h1 {
+        font-size: 35px;
+        padding-top: 60px;
+        padding-bottom: 50px;
+    }
+    .ow-row img{
+        width: 290px;
+        height: auto;
+    }
+    .ow-row{
+        gap:35px
+    }
+    .ow-content {
+        max-height: 810px; /* Установите начальную максимальную высоту */
+        gap: 35px;
+    }
+    .ow-content.show-all-rows {
+        max-height: 1670px; /* Установите достаточно большую максимальную высоту для показа всех строк */
+    }
+    .toggle-button {
+        width: 200px;
+        margin-top: 40px;
+        font-size: 19px;
     }
 }
-
-@media (min-width:1300px) {
-    .test{
-        background-color: #3cff00;
+@media (max-width:1024px) {
+    .ow-box h1 {
+        font-size: 30px;
+        padding-top: 50px;
+        padding-bottom: 38px;
+    }
+    .ow-row img{
+        width: 210px;
+        height: auto;
+    }
+    .ow-row{
+        gap:32px
+    }
+    .ow-content {
+        max-height: 600px; /* Установите начальную максимальную высоту */
+        gap: 32px;
+    }
+    .ow-content.show-all-rows {
+        max-height: 1270px; /* Установите достаточно большую максимальную высоту для показа всех строк */
+    }
+    .toggle-button {
+        width: 200px;
+        margin-top: 40px;
+        font-size: 18px;
     }
 }
-
-@media (min-width:1400px) {
-    .test{
-        background-color: #00ffbf;
-    }
-}
-
-@media (min-width:1500px) {
-    .test{
-        background-color: #ae00ff;
-    }
-}
-
-@media (min-width:1600px) {
-    .test{
-        background-color: #0004ff;
-    }
-}
-
-@media (min-width:1700px) {
-    .test{
-        background-color: #fbff00;
-    }
-}
-
