--- a/my-app/src/Companents/FirstComp/FirstComp.css
+++ b/my-app/src/Companents/FirstComp/FirstComp.css
@@ -1,11 +1,12 @@
 
 .fc-box{
     width: 100%;
-    height: 100svh;
+    height: 92.4svh;
+
     background-color: #474747;
     background-image: url('../../assets/bgImg.png');
     background-repeat: no-repeat;
-    background-size: auto auto;
+    background-size: auto 120%;
     background-position: center;
     font-family: 'Montserrat';
     color: white;
