--- a/my-app/src/Companents/ServicesComp/Carousel-hair.css
+++ b/my-app/src/Companents/ServicesComp/Carousel-hair.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  display: flexbox;
+  display: flex;
   flex-direction: column;
 }
 
@@ -36,7 +36,8 @@
   display: flex;
 
   width: auto;
-  justify-content: space-between;
+  justify-content: center;
+  align-content: center ;
   font-family: 'Montserrat-Light';
   height: 260px;
   max-width: 650px;
@@ -49,6 +50,9 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  justify-content: center;
+
+  align-self: center;
   align-items: center;
   min-width: 191px;
   max-width: 191px;
