--- a/my-app/src/Companents/Info/Info.css
+++ b/my-app/src/Companents/Info/Info.css
@@ -1,8 +1,8 @@
 .infomb-box{
     height: 500px;
-    background-image: url('../../assets/brand.png');
+    background-image: url('../../assets/brandfull.png');
     background-repeat: no-repeat;
-    background-size: auto 160%;
+    background-size: 100% auto;
     background-position: center;
     background-color: #474747;
     display: flexbox;
@@ -17,7 +17,8 @@
     align-items: center;
 }
 .infomb-about h1{
-    margin-left: 25px;
+    margin-left: 40px;
+    margin-right: 40px;
     font-size: 35px;
     font-family: 'Montserrat-Light';
     color:white;
@@ -26,24 +27,20 @@
 }
 
 .mbdivhr{
-    width: 400px;
+    width: 50svw;
     flex: 1;
     background-color: white;
-    margin-left: 25px;
+    margin-left: 40px;
     height: 2px;
     border-radius: 10px;
 }
-.infomb-obrezka{
-    width: 00px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 .firstmb-about{
-    width: 500px;
+    width: 84svw;
     display: flex; 
     flex-direction: column;
     justify-content: space-around; 
-    margin-top: 40px;
+    margin-top: 15px;
     color:white;
     margin-left: auto;
     margin-right: auto;
@@ -89,8 +86,75 @@
     background-color: rgba(255, 255, 255);
 
 }
+@media (max-width:630px) {
+    .infomb-box{
+        background-size: auto 100%;
+    }
+}
 @media (max-width:540px) {
-    
+    .mbdiva a{
+        font-size: 16px;
+        text-decoration: none;
+        color: rgb(199, 199, 199);
+        transition: color 0.5s ease;
+        cursor: pointer;
+    }
+    .mbdivhr{
+        width: 70svw;
+        flex: 1;
+        background-color: white;
+        margin-left: 25px;
+        margin-right: 25px;
+        height: 2px;
+        border-radius: 10px;
+    }
+    .infomb-about h1{
+        margin-left: 25px;
+        margin-right: 25px;
+
+        font-size: 27px;
+        font-family: 'Montserrat-Light';
+        color:white;
+        text-align: left;
+        margin-bottom: 20px;
+    }
+    .infomb-box{
+        height: 450px;
+        background-image: url('../../assets/brandfull.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: #474747;
+        display: flexbox;
+        flex-direction: column;
+        border: 1px solid #47474700;
+    }
+    .firstmb-about{
+        width: 84svw;
+        display: flex; 
+        flex-direction: column;
+        justify-content: space-around; 
+        margin-top: 15px;
+        color:white;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media (max-width:450px) {
+    .mbdiva a{
+        font-size: 15px;
+    }
+    .infomb-about h1{
+        font-size: 21px;
+    }
+    .mbdivhr{
+        width: 70svw;
+        flex: 1;
+        background-color: white;
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+    .infomb-box{
+        height: 430px;}
 }
 
 /* _______________________________________________________________ */
